[package]
name = "uno_server"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web={version = "4.0.1", features = ["openssl"]}
actix-web-actors="4.1.0"
actix="0.13.0"
uuid= { version="0.8", features=["v4", "serde"]}
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
actix-rt = "2.7.0"
strum_macros = "0.24.0"
